<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        android:id="@+id/name_field"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_name"
        android:text="@string/void_string" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_field"
        android:id="@+id/last_name_field" />

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/void_string"
        android:ems="10"
        android:id="@+id/edit_last_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_actor"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>